--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,15 @@ jobs:
         with:
           extensions: mbstring, xml, ctype, iconv, intl, pdo, pdo_mysql, dom, filter, gd, iconv, json, mbstring, pdo
 
+      - name: Cache multiple paths
+        uses: actions/cache@v2
+        with:
+          path: |
+            vendor
+              key: ${{ runner.os }}-${{ hashFiles('composer.lock') }}
+      - name: "Composer install"
+        run: composer install --no-interaction --no-progress
+
       # Runs a single command using the runners shell
       - name: LS
         run: ls
