--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,13 @@ jobs:
         run: |
           curl -sS https://get.symfony.com/cli/installer | bash
           mv /home/runner/.symfony5/bin/symfony /usr/local/bin/symfony
+      
       # Check vulnerabilities
       - name: Symfony Check Vulnerabilities
         run: symfony check:security
+
+      # PHP CS FIXER
+      - name: PHP-CS-Fixer
+        run: |
+          composer require friendsofphp/php-cs-fixer
+          ./vendor/bin/php-cs-fixer fix --dry-run
